<resources>
    <string name="app_name">Servix-App</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="servix_logo">Servix-Logo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="google_icon">Google Icon</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="default_web_client_id">990693200314-u5oghc52ktkhtg1lkpcfg7gqb312ro10.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="experts">Experts</string>
    <string name="notifications">Notify</string>
    <string name="profile">Profile</string>
    <string name="selected_image">Selected Image</string>
    <string name="button_text">Button Text</string>
    <string name="help_amp_contact"><![CDATA[Help & Contact]]></string>
    <string name="settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="faq">FAQ</string>
    <string name="hey_pat">Hey, Pat!</string>
    <string name="account_information">Account information</string>
    <string name="application_settings">Application settings</string>
    <string name="liked_service_requests">Liked service requests</string>
    <string name="become_an_expert">Become an expert</string>
    <string name="regulations">Regulations</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="cookie_files_settings">Cookie Files Settings</string>
    <string name="rate_servix_on_app_store">Rate Servix on App Store</string>
    <string name="about_app">About app</string>
    <string name="licenses">Licenses</string>
    <string name="log_out">Log out</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="see_password">see password</string>
</resources>