<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="75dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/profile_picture_imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/person"
                android:contentDescription="@string/profile_picture"
                android:scaleType="centerCrop"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/profile_greetings_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hey_pat"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="32dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/account_info_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/account_information"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/application_settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/application_settings"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/notifications_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/notifications"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/liked_services_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/liked_service_requests"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/become_expert_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/become_an_expert"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/help_contact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_amp_contact"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="32dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/contact_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/contact"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/faq_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/faq"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/regulations_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/regulations"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/privacy_policy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/privacy_policy"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cookie_files_settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/cookie_files_settings"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rate_servix_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/rate_servix_on_app_store"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/about_app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/about_app"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/licenses_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_button_style"
                android:drawableEnd="@drawable/right_arrow_icon"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:text="@string/licenses"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="@android:color/white"
                android:layout_marginTop="32dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/button_logout_background" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        style="@style/BottomNavigationViewStyle"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
