<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/servix_background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/plusIcon_imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus_icon" />

    <EditText
        android:id="@+id/register_email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="e-mail"
        android:background="@drawable/input_selector"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plusIcon_imageView" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_editText">

        <EditText
            android:id="@+id/register_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/input_selector"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:paddingEnd="48dp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/password_toggle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:clickable="true"
            android:contentDescription="@string/see_password"
            android:focusable="true"
            android:src="@drawable/eye_icon_closed" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/buttongradient"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/register_or_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/or"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <View
        android:id="@+id/register_dividerLeft"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/register_or_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_or_textView" />

    <View
        android:id="@+id/register_dividerRight"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register_or_textView"
        app:layout_constraintTop_toTopOf="@+id/register_or_textView" />

    <LinearLayout
        android:id="@+id/google_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/linearlayout_style"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_or_textView">

        <ImageView
            android:id="@+id/google_imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/google_icon"
            app:srcCompat="@drawable/google_icon" />

        <TextView
            android:id="@+id/google_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_google"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/register_signin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_in"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/google_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
